[Milan][VO-000] Add feature to set headers and status from custom config